plugins/formal-verification/testData/diagnostics/uniqueness/bad_unique/direct_pass_borrowed_unique_to_unique.kt
// UNIQUE_CHECK_ONLY

import org.jetbrains.kotlin.formver.plugin.NeverConvert
import org.jetbrains.kotlin.formver.plugin.NeverVerify
import org.jetbrains.kotlin.formver.plugin.Unique
import org.jetbrains.kotlin.formver.plugin.Borrowed

fun f(@Unique x: Int) {

}

<!UNIQUENESS_VIOLATION!>fun use_f(@Borrowed @Unique y: Int) {
    f(y)
}<!>
